syntax = "proto3";

package order;

option go_package = "github.com/sahilrana7582/orderX/pkg/generated/order;order";

message Order {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  string status = 5;
  string total_price = 6;
}


message CreateOrderRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message CreateOrderResponse {
    Order order = 1;
}


service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}